# LaMoshPit

./: .gitattributes  .gitignore  BITSTREAM_SURGERY_ARCHITECTURE.md  BUILDINSTRUCTIONS.md  CHANGELOG_UI_OVERHAUL_2026-04-15.md  CMakeLists.txt  LaMoshPit_UserManual.html  README.md  SESSION_SUMMARY_2026_04_14.md  main.cpp  resources.qrc  usercontrols.md
.continue/rules/: windowsonly-guidance.md
assets/ico/: desktop.ini
assets/png/: desktop.ini
cmake/: FindFFmpeg.cmake
core/bitstream/: Bitstreameditor.h
core/logger/: ControlLogger.cpp  ControlLogger.h
core/model/: GlobalEncodeParams.h  HackedMacroblock.h  Hackedframe.h  MBEditData.h  SelectionMap.cpp  SelectionMap.h  SelectionPreset.cpp  SelectionPreset.h  VideoSequence.h
core/pipeline/: DecodePipeline.cpp  DecodePipeline.h
core/presets/: PresetManager.cpp  PresetManager.h  VersionPathUtil.cpp  VersionPathUtil.h
core/project/: Project.cpp  Project.h
core/sequencer/: BlendModes.cpp  BlendModes.h  ClipEffects.cpp  ClipEffects.h  EditCommand.cpp  EditCommand.h  FrameRouter.cpp  FrameRouter.h  HwDecode.cpp  HwDecode.h  SequencerClip.h  SequencerClipDecoder.cpp  SequencerClipDecoder.h  SequencerPlaybackClock.cpp  SequencerPlaybackClock.h  SequencerProject.cpp  SequencerProject.h  SequencerRenderer.cpp  SequencerRenderer.h  SequencerTrack.h  SpoutSender.cpp  SpoutSender.h  Tick.h  TrackPlaybackChain.cpp  TrackPlaybackChain.h  Transition.cpp  Transition.h
core/thumbnail/: ThumbnailGenerator.cpp  ThumbnailGenerator.h
core/transform/: FrameTransformer.cpp  FrameTransformer.h
core/util/: HwEncoder.cpp  HwEncoder.h  MapFrameSampler.cpp  MapFrameSampler.h  SelectionMorphology.cpp  SelectionMorphology.h  VideoMetaProbe.cpp  VideoMetaProbe.h
docs/: Implementation_Plan_NLE_Rebuild_2026-04-17.md  NLE_MLT_Migration_Plan_2026-04-17.md  NLE_MSYS2_Setup.md  NLE_Sequencer_2026-04-15.md
gui/: AppFonts.cpp  AppFonts.h  BitstreamAnalyzer.cpp  BitstreamAnalyzer.h  MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h
gui/dialogs/: ApplyMapDialog.cpp  ApplyMapDialog.h  CustomSelectionDialog.cpp  CustomSelectionDialog.h  GrowShrinkDialog.cpp  GrowShrinkDialog.h  ImportSelectionMapDialog.cpp  ImportSelectionMapDialog.h  LoadSelectionDialog.cpp  LoadSelectionDialog.h  SaveSelectionDialog.cpp  SaveSelectionDialog.h  SeedDialog.cpp  SeedDialog.h
gui/nle_bridge/: NleControlChannel.cpp  NleControlChannel.h  NleLauncher.cpp  NleLauncher.h
gui/sequencer/: SequencerClipItem.cpp  SequencerClipItem.h  SequencerClipPropertiesPanel.cpp  SequencerClipPropertiesPanel.h  SequencerDock.cpp  SequencerDock.h  SequencerPlayheadItem.cpp  SequencerPlayheadItem.h  SequencerPreviewPlayer.cpp  SequencerPreviewPlayer.h  SequencerRenderDialog.cpp  SequencerRenderDialog.h  SequencerRulerItem.cpp  SequencerRulerItem.h  SequencerTimelineConstants.h  SequencerTimelineView.cpp  SequencerTimelineView.h  SequencerTrackHeader.cpp  SequencerTrackHeader.h  SequencerTransitionPanel.cpp  SequencerTransitionPanel.h
gui/undo/: Command.h  EditorCommands.cpp  EditorCommands.h  UndoController.cpp  UndoController.h
gui/widgets/: GlobalParamsWidget.cpp  GlobalParamsWidget.h  MacroblockWidget.cpp  MacroblockWidget.h  MediaBinWidget.cpp  MediaBinWidget.h  PreviewPlayer.cpp  PreviewPlayer.h  ProgressPanel.cpp  ProgressPanel.h  PropertyPanel.cpp  PropertyPanel.h  QuickMoshWidget.cpp  QuickMoshWidget.h  TimelineWidget.cpp  TimelineWidget.h  ToggleSwitch.cpp  ToggleSwitch.h  bitstreamtestwidget.cpp  bitstreamtestwidget.h
nle/: CMakeLists.txt
nle/src/: main.cpp
nle/src/ipc/: CoreControlClient.cpp  CoreControlClient.h
scripts/: build-nle-msys2.sh  install-msys2-deps.sh
scripts/nle-sanity-test/: CMakeLists.txt  main.cpp
vcpkg-overlay-ports/x264-lamoshpit/: portfile.cmake  vcpkg.json
x264-fork/: x264.h
x264-fork/common/: frame.c  frame.h
x264-fork/encoder/: analyse.c  encoder.c  macroblock.c  me.c
